--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
 		"outDir": "./build/",
 		"strictNullChecks": true,
 		"noImplicitAny": true,
-		"lib": ["esnext", "dom"],
+		"lib": ["esnext", "dom", "dom.iterable"],
 		"module": "ES6",
 		"target": "ES6",
 		"jsx": "react",
 		"allowJs": false,
 		"moduleResolution": "node",
 		"noEmitOnError": true,
-		"types": ["chrome"]
+		"types": ["chrome-types"]
 	}
 }
