--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Toppings adds an extra layer of flavor for a more efficient and convenient web.",
   "private": "true",
   "scripts": {
-    "build": "webpack --mode production --config webpack.config.js",
+    "build:prod": "webpack --mode production --config webpack.config.js",
+    "build:release": "npm run build:prod && node scripts/release.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
+    "archiver": "^6.0.1",
     "chrome-types": "^0.1.231",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
