--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Toppings adds an extra layer of flavor for a more efficient and convenient web.",
   "private": "true",
   "scripts": {
-    "build:dev": "webpack --mode development --watch --config webpack.config.js",
+    "build:dev": "webpack --watch --config webpack.config.dev.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "build:release": "npm run build:prod && node scripts/release.js",
     "test": "echo \"Error: no test specified\" && exit 1"
