--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
 		"allowJs": false,
 		"moduleResolution": "node",
 		"noEmitOnError": true,
-		"types": ["chrome-types"]
+		"types": ["chrome-types", "node"]
 	}
 }
