--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": "true",
   "scripts": {
     "build:dev": "webpack --watch --config webpack.config.dev.js",
-    "build:prod": "webpack --watch",
-    "build:release": "webpack && node scripts/release.js",
+    "build:prod": "webpack",
+    "build:release": "npm run build:prod && node scripts/release.js",
     "lint": "eslint . --ext .ts --config .eslintrc.json --fix",
     "type-check": "tsc --noEmit",
     "test": "npm run lint && npm run type-check"
