--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/enrich-platforms/toppings#readme",
   "devDependencies": {
+    "@types/chrome": "^0.0.253",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
