render renamed to attach for clarity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"rootDir": "./src",
 		"outDir": "./build/",
 		"strictNullChecks": true,
 		"noImplicitAny": true,
@@ -10,6 +11,12 @@
 		"allowJs": false,
 		"moduleResolution": "node",
 		"noEmitOnError": true,
+		"strict": true,
+		"removeComments": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"forceConsistentCasingInFileNames": true,
 		"types": ["chrome-types", "node"]
 	}
 }
