--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
 version: 2.1
 
+orbs:
+  node: circleci/node@5.1.1
+
 jobs:
   build:
     docker:
-      - image: circleci/node:18
-    working_directory: ~/repo
+      - image: cimg/base:stable
     steps:
       - checkout
       - run:
