--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,9 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@5.1.1
-
 jobs:
   build:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/node:18.19
     steps:
       - checkout
       - run:
