--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Toppings",
   "short_name": "Toppings",
   "version": "2.0.0",
-  "description": "Toppings adds an extra layer of flavor for a more efficient and convenient web.",
+  "description": "Your web, your way.",
   "homepage_url": "https://www.grabtoppings.xyz",
   "author": "Enrich Platforms",
   "icons": {
@@ -26,7 +26,7 @@
       "matches": ["<all_urls>"],
       "all_frames": true,
       "run_at": "document_start",
-      "css": ["css/styles.css"],
+      "css": ["css/youtube.css"],
       "js": ["content.js"]
     }
   ],
@@ -37,8 +37,13 @@
   },
   "web_accessible_resources": [
     {
-      "matches":  ["<all_urls>"],
-      "resources": ["modules/*.js", "assets/icons/icon128.png", "css/styles.css" ,"options/assets/icons8-settings-64.png"]
+      "matches": ["<all_urls>"],
+      "resources": [
+        "modules/*.js",
+        "css/*.css",
+        "assets/icons/icon128.png",
+        "options/assets/icons8-settings-64.png"
+      ]
     }
   ]
 }
