--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,12 +1,13 @@
 {
-	"env": {
-		"browser": true,
-		"es2021": true
-	},
-	"extends": "standard-with-typescript",
-	"parserOptions": {
-		"ecmaVersion": "latest",
-		"sourceType": "module"
-	},
-	"rules": {}
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": "standard-with-typescript",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {},
+  "ignorePatterns": ["**/*.js", "**/*.cjs"]
 }
