--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,9 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.7",
+    "@eslint/compat": "^1.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
     "@types/bun": "^1.0.5",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
@@ -45,12 +48,14 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.0.0",
-    "eslint": "^8.48.0",
+    "eslint": "9.x",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.2",
     "fs-extra": "^11.2.0",
+    "globals": "^15.5.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
@@ -59,6 +64,7 @@
     "ts-loader": "^9.4.4",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
+    "typescript-eslint": "^7.13.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
