--- a/app/package.json
+++ b/app/package.json
@@ -41,13 +41,14 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "archiver": "^6.0.1",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "chai": "^4.3.10",
     "chrome-types": "^0.1.231",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^7.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "9.x",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.28.1",
@@ -60,7 +61,10 @@
     "mini-css-extract-plugin": "^2.7.6",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "style-loader": "^3.3.4",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
     "ts-loader": "^9.4.4",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
