loosely migrate old options page to react

--- a/app/package.json
+++ b/app/package.json
@@ -78,7 +78,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "presets": [
     "@babel/preset-env",
