some refactoring, renaming for workers
1. `isExtensionActive` to `isExtensionEnabled`
2. `sendWebAppContextToTab`to `dispatchWebAppContext1
3. add store for global context and other data
4. move src/common/interfaces.ts to src/types.ts
4. move src/common/server.ts to src/server.ts
5. prepare to work on content script by renameing modules to workers
might have missed some more

--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -39,7 +39,7 @@
     {
       "matches": ["<all_urls>"],
       "resources": [
-        "modules/*.js",
+        "workers/*.js",
         "css/*.css",
         "assets/icons/icon128.png",
         "options/assets/*.png"
