--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,11 @@
     "prod": "webpack --watch --config webpack.prod.cjs",
     "build": "webpack --config webpack.prod.cjs",
     "release": "npm run build && node scripts/release.js",
-    "lint": "eslint . --ext .ts --fix",
+    "lint": "eslint . --fix",
     "type-check": "tsc --noEmit",
-    "test:static": "eslint . --ext .ts && npm run type-check",
-    "test:coverage": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' nyc --reporter=html mocha 'test/unit/**/*.{js,ts}'",
-    "test:unit": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha 'test/unit/**/*.{js,ts}'"
+    "test:static": "eslint . && npm run type-check",
+    "test:coverage": "nyc --reporter=html mocha 'test/unit/**/*.{js,ts}'",
+    "test:unit": "mocha 'test/unit/**/*.{js,ts}'"
   },
   "repository": {
     "type": "git",
@@ -47,7 +47,6 @@
     "chrome-types": "^0.1.231",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "9.x",
     "eslint-config-standard-with-typescript": "^39.0.0",
@@ -67,7 +66,7 @@
     "tailwindcss": "^3.4.4",
     "ts-loader": "^9.4.4",
     "ts-mocha": "^10.0.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.15.7",
     "typescript-eslint": "^7.13.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
