--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -26,7 +26,6 @@
       "matches": ["<all_urls>"],
       "all_frames": true,
       "run_at": "document_start",
-      "css": ["css/youtube.css"],
       "js": ["content.js"]
     }
   ],
@@ -40,8 +39,8 @@
       "matches": ["<all_urls>"],
       "resources": [
         "workers/*.js",
-        "css/*.css",
-        "assets/icons/icon128.png",
+        "assets/**/*.png",
+        "assets/**/*.svg",
         "options/assets/*.png"
       ]
     }
