--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -7,10 +7,10 @@
   "homepage_url": "https://www.grabtoppings.xyz",
   "author": "Enrich Platforms",
   "icons": {
-    "16": "/assets/icons/icon16.png",
-    "32": "/assets/icons/icon32.png",
-    "48": "/assets/icons/icon48.png",
-    "128": "/assets/icons/icon128.png"
+    "16": "/assets/icons/logo/icon16.png",
+    "32": "/assets/icons/logo/icon32.png",
+    "48": "/assets/icons/logo/icon48.png",
+    "128": "/assets/icons/logo/icon128.png"
   },
   "host_permissions": ["<all_urls>"],
   "permissions": ["webNavigation", "storage"],
@@ -32,7 +32,7 @@
   "action": {
     "default_popup": "./popup/index.html",
     "default_title": "Toppings: Preferences",
-    "default_icon": "assets/icons/icon128.png"
+    "default_icon": "assets/icons/logo/icon128.png"
   },
   "web_accessible_resources": [
     {
