change deploysite workflow key to run

--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -41,7 +41,7 @@ jobs:
           cache: ${{ steps.detect-package-manager.outputs.manager }}
 
       - name: Install Bun
-        command: |
+        run: |
           curl -fsSL https://bun.sh/install | bash
           echo 'export BUN_INSTALL="$HOME/.bun"' >> $BASH_ENV
           echo 'export PATH="$BUN_INSTALL/bin:$PATH"' >> $BASH_ENV
