--- a/app/package.json
+++ b/app/package.json
@@ -76,6 +76,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
