--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^9.5.0",
     "@types/bun": "^1.0.5",
     "@types/chai": "^4.3.11",
+    "@types/lodash": "^4.17.6",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.8.9",
     "@types/react": "^18.3.3",
@@ -77,6 +78,7 @@
   },
   "dependencies": {
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
