--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.24",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "archiver": "^6.0.1",
@@ -62,6 +63,7 @@
     "nyc": "^15.1.0",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
+    "sinon": "^18.0.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "ts-loader": "^9.4.4",
