--- a/.github/workflows/build-and-deploy-to-pages.yml
+++ b/.github/workflows/build-and-deploy-to-pages.yml
@@ -1,20 +1,13 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
-name: Deploy Next.js site to Pages
+name: Build and Deploy to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ['v2.x']
+    branches: ["v2.x"]
     paths:
-      - 'docs/**'
+      - "docs/**"
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
@@ -23,11 +16,10 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -68,7 +60,6 @@ jobs:
         with:
           path: docs/out
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
