--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
