--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/enrych/toppings#readme",
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-react-jsx": "^7.24.7",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.7",
@@ -50,6 +51,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
+    "dom-chef": "^5.1.1",
     "eslint": "9.x",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.28.1",
