--- a/app/package.json
+++ b/app/package.json
@@ -81,6 +81,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "element-ready": "^7.0.0",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
