update webpack for firefox

--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -44,5 +44,10 @@
         "options/assets/*.png"
       ]
     }
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "toppings@enry.ch"
+    }
+  }
 }
