--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,37 +1,67 @@
-name: 🐛 Bug
-description: Create a report to help us improve
-title: "[<directory>][<file>]: <issue>"
+name: Bug Report
+description: Report a bug or unexpected behavior.
+title: "Bug: [Brief description of the issue]"
 labels: ["Status: Needs Investigation", "Type: Bug🐛"]
 body:
-  - type: textarea
+  - type: markdown
     attributes:
-      label: Describe the bug
-      description: A clear and concise description of what the bug is
-    validations:
-      required: true
-  - type: textarea
+      value: |
+        Thank you for reporting a bug! Please fill out the details below so we can help resolve the issue quickly.
+
+  - type: input
+    id: description
     attributes:
-      label: Steps To Reproduce
-      description: Steps to reproduce the behavior
+      label: Description
+      description: "Provide a clear and concise description of the bug."
+      placeholder: "Describe the bug in detail."
+
+  - type: textarea
+    id: steps_to_reproduce
+    attributes:
+      label: Steps to Reproduce
+      description: "Please provide step-by-step instructions on how to reproduce the bug."
       placeholder: |
-        1. Go to'...'
-        2. Click on'...'
-        3. Scroll down to'...'
+        1. Go to '...'
+        2. Click on '...'
+        3. Scroll down to '...'
         4. See error
-    validations:
-      required: true
-  - type: textarea
+
+  - type: input
+    id: expected_behavior
     attributes:
       label: Expected Behavior
-      description: A clear and concise description of what you expected to happen
-    validations:
-      required: true
-  - type: textarea
-    attributes:
-      label: Screenshots
-      description: |
-        If applicable, add screenshots to help explain your problem
+      description: "Describe what you expected to happen."
+      placeholder: "Expected outcome of the action."
 
-        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in
-    validations:
-      required: false
+  - type: input
+    id: actual_behavior
+    attributes:
+      label: Actual Behavior
+      description: "Describe what actually happened."
+      placeholder: "Actual outcome that you observed."
+
+  - type: dropdown
+    id: browser
+    attributes:
+      label: Browser
+      description: "Select the browser where the issue occurs."
+      options:
+        - "Chrome"
+        - "Firefox"
+        - "Edge"
+        - "Safari"
+        - "Other"
+
+  - type: input
+    id: browser_version
+    attributes:
+      label: Browser Version
+      description: "Provide the browser version where the bug occurred."
+      placeholder: "e.g., 91.0.4472.124"
+
+  - type: textarea
+    id: additional_context
+    attributes:
+      label: Additional Context
+      description: "Add any other context, logs, or screenshots to help us understand the issue."
+      placeholder: "Include logs, screenshots, or other details here."
