--- a/.github/ISSUE_TEMPLATE/docs.yml
+++ b/.github/ISSUE_TEMPLATE/docs.yml
@@ -1,33 +1,30 @@
-name: 📝 Documentation
-description: Propose changes and improvements to Docs.
+name: Documentation
+description: Request updates or additions to the documentation.
+title: "Docs: [Brief description of the request]"
 labels: ["Status: Needs Investigation", "Type: Documentation"]
-title: "[docs]: "
 body:
-  - type: textarea
+  - type: markdown
     attributes:
-      label: Why do the Docs need this improvement?
-      description: A clear and concise description of the issue.  What is the motivation for this change? How will this change benefit the community?
-      placeholder: "I would like to contribute to JSON Schema Docs 📑 by..."
-    validations:
-      required: true
+      value: |
+        Thanks for suggesting an update or addition to the documentation! Please fill out the details below.
+
+  - type: input
+    id: description
+    attributes:
+      label: Description
+      description: "Describe the missing or unclear documentation."
+      placeholder: "Explain the specific area or topic that requires documentation."
+
+  - type: input
+    id: reason_for_update
+    attributes:
+      label: Reason for Update
+      description: "Why is this documentation update necessary?"
+      placeholder: "Explain why the current documentation is insufficient."
 
   - type: textarea
+    id: additional_context
     attributes:
-      label: Describe the changes/solution you suggest
-      description: A clear and concise description of what you want to happen
-    validations:
-      required: true
-  - type: textarea
-    attributes:
-      label: Additional context
-      description: Add any other context about the issue here
-    validations:
-      required: false
-  - type: dropdown
-    attributes:
-      label: Are you working on this?
-      options:
-        - "Yes"
-        - "No"
-    validations:
-      required: true
+      label: Additional Context
+      description: "Add any other relevant information, like links or examples."
+      placeholder: "Include any additional context or related issues here."
