update manifest keys, structure, add initial i18n

--- a/web-ext/src/manifest.json
+++ b/web-ext/src/manifest.json
@@ -1,48 +1,50 @@
 {
-  "manifest_version": 3,
-  "name": "Toppings",
-  "short_name": "Toppings",
-  "version": "3.0.0",
-  "description": "Your web, your way.",
-  "homepage_url": "https://enrych.github.io/toppings",
-  "author": "Enrych Platforms",
-  "icons": {
-    "16": "/assets/icons/logo/icon16.png",
-    "32": "/assets/icons/logo/icon32.png",
-    "48": "/assets/icons/logo/icon48.png",
-    "128": "/assets/icons/logo/icon128.png"
+  "action": {
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "32": "assets/icons/icon32.png",
+      "48": "assets/icons/icon48.png",
+      "128": "assets/icons/icon128.png"
+    },
+    "default_title": "__MSG_popupTitle__",
+    "default_popup": "popup/index.html"
   },
-  "host_permissions": ["<all_urls>"],
-  "permissions": ["webNavigation", "storage"],
+  "author": "Enrych",
+  "background": {
+    "service_worker": "/background.js"
+  },
+  "commands": {},
+  "content_scripts": [
+    {
+      "all_frames": true,
+      "js": ["/content.js"],
+      "matches": ["*://*.youtube.com/*"],
+      "run_at": "document_start"
+    }
+  ],
+  "default_locale": "en",
+  "description": "__MSG_description__",
+  "homepage_url": "https://enrych.github.io/toppings",
+  "host_permissions": ["*://*.youtube.com/*"],
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "32": "assets/icons/icon32.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
+  },
+  "manifest_version": 3,
+  "name": "Toppings on YouTube",
   "options_ui": {
     "open_in_tab": true,
     "page": "/options/index.html"
   },
-  "background": {
-    "service_worker": "/background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "all_frames": true,
-      "run_at": "document_start",
-      "js": ["content.js"]
-    }
-  ],
-  "action": {
-    "default_popup": "./popup/index.html",
-    "default_title": "Toppings: Quick Access",
-    "default_icon": "assets/icons/logo/icon128.png"
-  },
+  "permissions": ["webNavigation", "storage"],
+  "short_name": "Toppings",
+  "version": "3.0.0",
   "web_accessible_resources": [
     {
-      "matches": ["<all_urls>"],
-      "resources": [
-        "webApps/*.js",
-        "assets/**/*.png",
-        "assets/**/*.svg",
-        "options/assets/*.png"
-      ]
+      "matches": ["*://*.youtube.com/*"],
+      "resources": ["assets/*", "options/assets/*"]
     }
   ]
 }
