fix config name failing deployment

--- a/services/playlist-runtime/wrangler.toml
+++ b/services/playlist-runtime/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "@toppings/playlist-runtime"
+name = "toppings-playlist-runtime"
 main = "src/index.ts"
 compatibility_date = "2024-11-12"
 compatibility_flags = ["nodejs_compat"]
