update webpack config and merge into one

--- a/web-ext/package.json
+++ b/web-ext/package.json
@@ -4,10 +4,12 @@
   "description": "Your web, your way.",
   "private": "true",
   "scripts": {
-    "dev": "webpack --watch --config webpack.dev.cjs",
-    "dev:firefox": "BROWSER=firefox bun run dev",
-    "prod": "webpack --watch --config webpack.prod.cjs",
-    "build": "webpack --config webpack.prod.cjs",
+    "dev": "webpack --watch --mode development --env browser=chrome",
+    "dev:firefox": "webpack --watch --mode development --env browser=firefox",
+    "prod": "webpack --watch --mode production --env browser=chrome",
+    "prod:firefox": "webpack --watch --mode production --env browser=firefox",
+    "build": "webpack --mode production --env browser=chrome",
+    "build:firefox": "webpack --mode production --env browser=firefox",
     "release": "bun run build && bun scripts/release.js",
     "lint": "eslint . --fix",
     "type-check": "tsc --noEmit",
