kuch toh bahot crazy refactor

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# MacOS
 **/.DS_Store
+
+# Logs
+logs
+
+# nyc test coverage
+.nyc_output
+coverage
+
+# Dependency directories
+node_modules/
+
+# Build
+dist
+*.zip
