--- a/web-ext/package.json
+++ b/web-ext/package.json
@@ -3,26 +3,23 @@
   "version": "3.0.0",
   "description": "Your YouTube, Your Way.",
   "private": "true",
+  "type": "module",
   "scripts": {
-    "dev": "webpack --watch --mode development --env browser=chrome",
-    "dev:firefox": "webpack --watch --mode development --env browser=firefox",
-    "prod": "webpack --watch --mode production --env browser=chrome",
-    "prod:firefox": "webpack --watch --mode production --env browser=firefox",
-    "build": "webpack --mode production --env browser=chrome",
-    "build:firefox": "webpack --mode production --env browser=firefox",
+    "dev": "webpack --watch --config ./scripts/build.js",
+    "dev:firefox": "webpack --watch --config ./scripts/build.js --env firefox",
+    "build": "webpack --config ./scripts/build.js --env production",
+    "build:firefox": "webpack --config ./scripts/build.js --env production firefox",
     "release": "bun run build && bun scripts/release.js",
+    "release:firefox": "bun run build:firefox && bun scripts/release.js firefox",
     "lint": "eslint . --fix",
     "type-check": "tsc --noEmit",
-    "test:all": "bun run test:static && bun run test:unit",
-    "test:static": "eslint . && bun run type-check",
-    "test:coverage": "nyc --reporter=html mocha 'test/unit/**/*.{js,ts}'",
-    "test:unit": "mocha 'test/unit/**/*.{js,ts}'"
+    "test": "bun run type-check"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/enrych/toppings.git"
   },
-  "author": "Enrych Platforms",
+  "author": "Enrych",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/enrych/toppings/issues"
@@ -34,51 +31,25 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.7",
-    "@eslint/compat": "^1.1.0",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.5.0",
     "@types/bun": "^1.0.5",
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
     "@types/node": "^20.8.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.24",
-    "@types/sinon": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
-    "chai": "^4.3.10",
     "chrome-types": "^0.1.231",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
     "dom-chef": "^5.1.1",
-    "eslint": "9.x",
-    "eslint-config-standard-with-typescript": "^39.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.0.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.34.2",
     "fs-extra": "^11.2.0",
-    "globals": "^15.5.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
-    "sinon": "^18.0.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
-    "ts-loader": "^9.4.4",
-    "ts-mocha": "^10.0.0",
-    "tsx": "^4.15.7",
-    "typescript-eslint": "^7.13.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-cli": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.2.2"
