fix redundant use of onCompleted listener

--- a/web-ext/src/manifest.json
+++ b/web-ext/src/manifest.json
@@ -19,7 +19,7 @@
     {
       "all_frames": true,
       "js": ["/content.js"],
-      "matches": ["https://youtube.com/*"],
+      "matches": ["https://www.youtube.com/*"],
       "run_at": "document_end"
     }
   ],
